clean up style stuff, fix contact page

--- a/src/_includes/job.njk
+++ b/src/_includes/job.njk
@@ -3,13 +3,13 @@ layout: layout.njk
 ---
 
 
-<div class="flex flex-col gap-8 mb-16">
-    <div class="mt-4">
-        <h1 class="text-5xl font-extraligh mb-4 instrument-serif">{{ title }}</h1>      
+<div class="flex flex-col gap-8 my-16">
+    <div class="my-4">
+        <h1 class="text-5xl font-extraligh mb-4 ">{{ title }}</h1>      
         <span>{{ tech }}, {{ year }}</span>    
     </div>
 
-    <img class="rounded-xl" src="{{ image }}" />
+    <img class="rounded" src="{{ image }}" />
     <div class="w-full flex flex-col gap-4 items-start my-4 md:my-12">
         <div class="flex flex-col md:flex-row gap-8 w-full">
 
