--- a/src/index.njk
+++ b/src/index.njk
@@ -29,7 +29,7 @@ title: Home
             <span class="instrument-serif text">{{loop.index}}/{{loop.length}}</span>        
             <h3 class="font-bold pb-2 "><a href="{{post.url}}">{{post.data.title}}</a></h3>
             <p>{{post.data.summary}}</p>
-            <a class="block mt-12 underline" href="{{post.url}}">view</a>
+            <a class="block mt-12 underline" href="{{post.url}}">->-></a>
         </div>
     </div>
     <div class="md:border-y md:border-r">
