--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -67,8 +67,9 @@
     <!-- Safe docs: https://mozilla.github.io/nunjucks/templating.html#safe -->    
     {{ content | safe }}
   </main>
-  <footer id="footer" class="z-0 w-full bg-neutral-50 dark:bg-gray-950 dark:text-white p-4 justify-self-end">
-    hello
+  <footer id="footer" class="z-0 w-full bg-neutral-50 dark:bg-gray-950 dark:text-white p-4 justify-self-end justify-between flex flex-row">
+    <a href="/contact">Contact</a>
+    <span>😀</span>
   </footer>
   <script src="/script.js"></script>
 </body>
