content clean up

--- a/src/index.njk
+++ b/src/index.njk
@@ -16,8 +16,8 @@ title: Home
     <div class="w-1/2 md:w-full border-r-0 md:border-r pl-4 p-2  text-2xl top-fade h-full relative float-left">
         <div class="md:absolute left-4 bottom-2 instrument-serif">❋ Featured Work</div>
         <div class="md:absolute right-4 bottom-2">
-            <span class="featured-prev cursor-pointer"><-</span>
-            <span class="featured-next cursor-pointer">-></span>
+            <span class="featured-prev cursor-pointer hover:text-red-500"><-</span>
+            <span class="featured-next cursor-pointer hover:text-red-500">-></span>
         </div>        
     </div>
     <div class="w-1/3 md:w-full border-r-0 md:border-r pr-4 p-2 top-fade absolute right-0 text-end md:relative">
