--- a/src/work.njk
+++ b/src/work.njk
@@ -10,19 +10,45 @@ permalink: /work/{{ tag }}/
 
 <h1 class="text-5xl mb-6 hidden">{{ title }}</h1>
 <div class="flex flex-wrap gap-4 my-6">
-        {% pillbutton page, 'Everything', '/work-new/everything/' %} 
-        {% pillbutton page, 'Arts organizations', '/work-new/arts/' %}
-        {% pillbutton page, 'Small Business', '/work-new/business/' %}
-        {% pillbutton page, 'Education', '/work-new/education/' %} 
+        {% pillbutton page, 'Everything', '/work/everything/' %} 
+        {% pillbutton page, 'The Arts', '/work/arts/' %}
+        {% pillbutton page, 'Design and Architecture', '/work/design/' %}
+        {% pillbutton page, 'Science and Technology', '/work/sciencetech/' %} 
 </div>
-<div class="p-4">
+<div class="p-8">
+
+    {% if tag !== 'everything' %}
+        <div class="pb-16">
+            {% if tag == 'arts' %}
+                {% twocolumn %}
+                <h1 class="text-base uppercase pb-4">The Arts</h1>
+                {% mediumtext %}We have been servicing arts organizations of all shapes and sizes for many years. From consulting for organizations that lack internal technical expertise, to setting up robust content management systems that can accommodate the full depth and breadth of your offerings, we provide practical solutions that keep things running smoothly. {% endmediumtext %}
+                <!-- split --> 
+                {% endtwocolumn %}       
+            {% endif %}
+            {% if tag == 'sciencetech' %}
+                <h1 class="text-base uppercase pb-4">Science and Technology</h1>
+                {% twocolumn %}
+                    {% mediumtext %}We work with science and technology groups that need to clearly communicate about their work. Whether you are moving fast or building slow and steady, we can build you a modern website to help you achieve your strategic communication goals.{% endmediumtext %}          
+                <!-- split --> 
+                {% endtwocolumn %}       
+            {% endif %}
+            {% if tag == 'design' %}
+                <h1 class="text-base uppercase pb-4">Design and Architecture</h1>
+                {% twocolumn %}
+                    {% mediumtext %}Interior design and architecture websites are often characterized by beautiful imagery and pixel perfect design. We have experience setting up solutions that give designers full control over how their work is seen online, one of the most important drivers of new business. {% endmediumtext %}          
+                <!-- split --> 
+                {% endtwocolumn %}       
+            {% endif %}              
+        </div>
+    {% endif %}  
     {% set taglist = collections[ tag ] | sort(attribute='data.importance') %}
     {% for post in taglist %}
-        <div class="mb-24">
+        <div class="mb-12 md:mb-24">
             <div class="featured-image mb-4">                
-                <a href="{{post.url}}"><img class="" src="{{ post.data.image }}" alt="{{post.data.title}}"></a>
+                <a href="{{post.url}}"><img class="w-full" src="{{ post.data.image }}" alt="{{post.data.title}}"></a>
             </div>
-            <h2 class="font-semibold text-right"><a href="{{post.url}}">{{ post.data.title }} -></a></h2>
+            <h2 class="font-semibold"><a href="{{post.url}}">{{ post.data.title }} -></a></h2>
         </div>
     {% endfor %}
 </div>
