--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@ title: Home
 
 <div class="full-width flex flex-col md:flex-row gap-8 items-center my-12 p-4">
     <div class="w-full md:w-7/12">
-        {% bigtext %}Web development in Oakland, CA, focused on helping arts and environmental organizations, non-profits and small businesses communicate online.{% endbigtext %}
+        {% bigtext %}Expert web development focused on helping you communicate online.{% endbigtext %}
     </div>        
 </div>
 <div class="full-width">
