--- a/src/index.njk
+++ b/src/index.njk
@@ -46,27 +46,48 @@ title: Home
 {% endfor %}
 </div>
 
-<div class="full-width px-8 mb-24">
+<div class="full-width px-8 mb-24 ">
     <div class="instrument-serif text-2xl mb-12">❋ Select Industries</div>
-    <div class="pb-24 mb-24 border-b border-gray-200">
+    <div class="pb-24 mb-24 border-b border-dashed border-gray-200 dark:border-gray-600">
         {% twocolumn %}
-            <h1 class="text-base uppercase pb-4 font-bold">The Arts</h1>
-            {% mediumtext %}We have been servicing arts organizations of all shapes and sizes for many years. From consulting for organizations that lack internal technical expertise, to setting up robust content management systems that can accommodate the full depth and breadth of an institution's offerings, we provide practical solutions that keep things running smoothly. {% endmediumtext %}
+            <h2 class="text-base uppercase pb-4 font-bold">The Arts</h2>
+            <p>We have been servicing arts organizations of all shapes and sizes for many years. From consulting for organizations that lack internal technical expertise, to setting up robust content management systems that can accommodate the full depth and breadth of an institution's offerings, we provide practical solutions that keep things running smoothly.</p>
             <a href="/work/arts/" class="block mt-12 underline">See the work -></a>
         <!-- split --> 
             <img src="{{ '/assets/images/bampfa/bampfa-building.jpg' | url }}" alt="The Arts" class="w-full mx-auto">
         {% endtwocolumn %}          
     </div>
-    <div>
+    <div class="pb-24 mb-24 border-b border-dashed border-gray-200 dark:border-gray-600">
         {% twocolumn %}
             <img src="{{ '/assets/images/ringo/image-5.jpg' | url }}" alt="The Arts" class="w-full mx-auto">
 
         <!-- split --> 
-            <h1 class="text-base uppercase pb-4 font-bold">Architecture and Design</h1>
-            {% mediumtext %}Architecture and design websites are often characterized by beautiful, immersive imagery and pixel perfect design. We have experience setting up solutions that give designers full control over how their work is seen online, one of the most important drivers of new business. {% endmediumtext %}
+            <h2 class="text-base uppercase pb-4 font-bold">Architecture and Design</h2>
+            <p>Architecture and design websites are often characterized by beautiful, immersive imagery and pixel perfect design. We have experience setting up solutions that give designers full control over how their work is seen online, one of the most important drivers of new business. </p>
             <a href="/work/design/" class="block mt-12 underline">See the work -></a>
         {% endtwocolumn %}          
     </div>    
+</div>
+
+<div class="full-width px-8 mb-24">
+    <div class="instrument-serif text-2xl">❋ Services</div>
+    <div class="flex flex-col md:flex-row gap-12 items-start my-4 w-full">
+        <div class="w-full md:w-1/3">
+            <h3 class="text-base uppercase pb-4 font-bold">Web Development</h3>
+            <p>Full service web development with a focus on simple, performant solutions.</p>
+        </div>    
+        <div class="w-full md:w-1/3">
+            <h3 class="text-base uppercase pb-4 font-bold">Project Management</h3>
+            <p>Expert guidance through every step of a project.</p>
+        </div>
+        <div class="w-full md:w-1/3">
+            <h3 class="text-base uppercase pb-4 font-bold">Support and Maintenance</h3>
+            <p>Ongoing care that keeps your site working well for years to come.</p>
+        </div>
+    </div>
+    <div class="text-center my-20">
+        <a href="/about/" class="underline">Learn more about our process -></a>
+    </div>
 </div>
 
 
