--- a/src/index.njk
+++ b/src/index.njk
@@ -49,13 +49,16 @@ title: Home
 <div class="full-width px-8 mb-24">
     <div class="instrument-serif text-2xl mb-12">❋ Select Industries</div>
     <div class="pb-24 mb-24 border-b border-gray-200">
-        {% twocolumn %}
-            <h1 class="text-base uppercase pb-4 font-bold">The Arts</h1>
-            {% mediumtext %}We have been servicing arts organizations of all shapes and sizes for many years. From consulting for organizations that lack internal technical expertise, to setting up robust content management systems that can accommodate the full depth and breadth of an institution's offerings, we provide practical solutions that keep things running smoothly. {% endmediumtext %}
-            <a href="/work/arts/" class="block mt-12 underline">See the work -></a>
-        <!-- split --> 
-            <img src="{{ '/assets/images/bampfa/bampfa-building.jpg' | url }}" alt="The Arts" class="w-full mx-auto">
-        {% endtwocolumn %}          
+        <div class="flex flex-col-reverse md:flex-row gap-4">
+            <div class="md:w-1/2">
+                <h1 class="text-base uppercase pb-4 font-bold">The Arts</h1>
+                <p>We have been servicing arts organizations of all shapes and sizes for many years. From consulting for organizations that lack internal technical expertise, to setting up robust content management systems that can accommodate the full depth and breadth of an institution's offerings, we provide practical solutions that keep things running smoothly. </p>
+                <a href="/work/arts/" class="block mt-12 underline">See the work -></a>
+            </div>
+            <div class="md:w-1/2">
+                <img src="{{ '/assets/images/bampfa/bampfa-building.jpg' | url }}" alt="The Arts" class="w-full mx-auto">
+            </div>
+        </div>      
     </div>
     <div>
         {% twocolumn %}
@@ -63,7 +66,7 @@ title: Home
 
         <!-- split --> 
             <h1 class="text-base uppercase pb-4 font-bold">Architecture and Design</h1>
-            {% mediumtext %}Architecture and design websites are often characterized by beautiful, immersive imagery and pixel perfect design. We have experience setting up solutions that give designers full control over how their work is seen online, one of the most important drivers of new business. {% endmediumtext %}
+            <p>Architecture and design websites are often characterized by beautiful, immersive imagery and pixel perfect design. We have experience setting up solutions that give designers full control over how their work is seen online, one of the most important drivers of new business. </p>
             <a href="/work/design/" class="block mt-12 underline">See the work -></a>
         {% endtwocolumn %}          
     </div>    
