--- a/src/index.njk
+++ b/src/index.njk
@@ -48,7 +48,7 @@ title: Home
 
 <div class="full-width px-8 mb-24 ">
     <div class="instrument-serif text-2xl mb-12">❋ Select Industries</div>
-    <div class="pb-24 mb-24 border-b border-gray-200">
+    <div class="pb-24 mb-24 border-b border-dashed border-gray-200 dark:border-gray-600">
         <div class="flex flex-col-reverse md:flex-row gap-4">
             <div class="md:w-1/2">
                 <h1 class="text-base uppercase pb-4 font-bold">The Arts</h1>
