--- a/src/index.njk
+++ b/src/index.njk
@@ -5,10 +5,26 @@ title: Home
 
 <div class="full-width flex flex-col md:flex-row gap-8 items-center my-12 p-4">
     <div class="w-full md:w-7/12">
-        {% bigtext %}Expert web development focused on helping you communicate online.{% endbigtext %}
+        {% bigtext %}Expert web development and digital services focused on helping ↓<br />
+        <span id="rotating-text" class="text-lime-700 dark:text-lime-300"></span>
+        <br />
+        communicate online.{% endbigtext %}
     </div>        
 </div>
-<div class="full-width">
+<div class="full-width px-4 mb-24 ">
+    <div class="instrument-serif text-2xl mb-12 text-center">❋ Featured Work</div>
+    <div class="flex flex-col md:flex-row gap-12 items-start my-4 w-full">
+        {% set works = collections.featured | sort(attribute='data.year') | reverse %}
+        {% for post in works %}
+        <div class="w-full md:w-1/3">
+            <a href="{{post.url}}"><img class="mb-4" src="{{ post.data.image }}" alt="{{post.data.title}}"></a>            
+            <h3 class="pb-2 "><a href="{{post.url}}">{{post.data.title}}</a></h3>
+            <p>{{ post.data.summary | safe }}</p>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+<!-- <div class="full-width">
 {% set works = collections.featured | sort(attribute='data.year') | reverse %}
 {% for post in works %}
 <div class="featured-work mb-16 relative">
@@ -27,7 +43,7 @@ title: Home
     <div class="border-t md:border-y border-r p-4  flex flex-col">
         <div class="featured-content">
             <span class="instrument-serif text">{{loop.index}}/{{loop.length}}</span>        
-            <h3 class="font-bold pb-2 "><a href="{{post.url}}">{{post.data.title}}</a></h3>
+            <h3 class="pb-2 "><a href="{{post.url}}">{{post.data.title}}</a></h3>
             <p>{{post.data.summary}}</p>
             <a class="block mt-12 underline" href="{{post.url}}">->-></a>
         </div>
@@ -44,52 +60,70 @@ title: Home
     <div class="bottom-fade max-sm:hidden"></div>        
 </div>
 {% endfor %}
-</div>
+</div> -->
 
-<div class="full-width px-8 mb-24 ">
-    <div class="instrument-serif text-2xl mb-12">❋ Select Industries</div>
-    <div class="pb-24 mb-24 border-b border-dashed border-gray-200 dark:border-gray-600">
-        <div class="flex flex-col-reverse md:flex-row gap-4">
+<div class="full-width px-4 mb-24 ">
+    <div class="instrument-serif text-2xl mb-12 text-center">❋ Select Industries</div>
+    <div class="pb-16 mb-16 border-b border-dashed border-gray-200 dark:border-gray-600">
+        <div class="flex flex-col-reverse md:flex-row gap-16">
             <div class="md:w-1/2">
-                <h1 class="text-base uppercase pb-4 font-bold">The Arts</h1>
+                <h1 class=" pb-4">The Arts</h1>
                 <p>We have been servicing arts organizations of all shapes and sizes for many years. From consulting for organizations that lack internal technical expertise, to setting up robust content management systems that can accommodate the full depth and breadth of an institution's offerings, we provide practical solutions that keep things running smoothly. </p>
-                <a href="/work/arts/" class="block mt-12 underline">See the work -></a>
+                <a href="/work/arts/" class="block mt-4 underline">See the work</a>
+
             </div>
             <div class="md:w-1/2">
                 <img src="{{ '/assets/images/bampfa/bampfa-building.jpg' | url }}" alt="The Arts" class="w-full mx-auto">
             </div>
-        </div>      
+        </div>  
+        <div class="flex flex-row flex-wrap items-center justify-around md:justify-between gap-4 mt-16">
+            <img class="w-28 opacity-50" src="{{ '/assets/images/logos/bampfa-logo.png' | url }}" alt="BAMPFA Logo">
+            <img class="w-12 opacity-50" src="{{ '/assets/images/logos/500capp-logo.png' | url }}" alt="500 Capp Street Logo">
+            <img class="w-36 opacity-50" src="{{ '/assets/images/logos/lightsource-logo.png' | url }}" alt="Lightsource Logo">
+            <img class="w-36 opacity-50" src="{{ '/assets/images/logos/canalprojects-logo.png' | url }}" alt="Canal Projects Logo">
+
+        </div>            
     </div>
     <div class="pb-24 mb-24 border-b border-dashed border-gray-200 dark:border-gray-600">
-        {% twocolumn %}
-            <img src="{{ '/assets/images/ringo/image-5.jpg' | url }}" alt="The Arts" class="w-full mx-auto">
+        <div class="flex flex-col-reverse md:flex-row-reverse gap-16">
+            <div class="md:w-1/2">
+                <h1 class="pb-4">Architecture and Design</h1>
+                <p>Architecture and design websites are often characterized by beautiful, immersive imagery and pixel perfect design. We have experience setting up solutions that give designers full control over how their work is seen online, one of the most important drivers of new business. </p>
+                <a href="/work/arts/" class="block mt-4 underline">See the work</a>
+            </div>
+            <div class="md:w-1/2">
+                <img src="{{ '/assets/images/ringo/image-1.jpg' | url }}" alt="Architecture and Design" class="w-full mx-auto">
+            </div>
+        </div>   
+        <div class="flex flex-row flex-wrap items-center justify-around md:justify-between gap-4 mt-16">
+            <img class="w-28 opacity-50" src="{{ '/assets/images/logos/bampfa-logo.png' | url }}" alt="BAMPFA Logo">
+            <img class="w-12 opacity-50" src="{{ '/assets/images/logos/500capp-logo.png' | url }}" alt="500 Capp Street Logo">
+            <img class="w-36 opacity-50" src="{{ '/assets/images/logos/lightsource-logo.png' | url }}" alt="Lightsource Logo">
+            <img class="w-36 opacity-50" src="{{ '/assets/images/logos/canalprojects-logo.png' | url }}" alt="Canal Projects Logo">
 
-        <!-- split --> 
-            <h1 class="text-base uppercase pb-4 font-bold">Architecture and Design</h1>
-            <p>Architecture and design websites are often characterized by beautiful, immersive imagery and pixel perfect design. We have experience setting up solutions that give designers full control over how their work is seen online, one of the most important drivers of new business. </p>
-            <a href="/work/design/" class="block mt-12 underline">See the work -></a>
-        {% endtwocolumn %}          
+        </div>          
     </div>    
+  
 </div>
 
 <div class="full-width px-8 mb-24">
-    <div class="instrument-serif text-2xl">❋ Services</div>
+    <div class="instrument-serif text-2xl mb-12 text-center">❋ Services</div>
     <div class="flex flex-col md:flex-row gap-12 items-start my-4 w-full">
         <div class="w-full md:w-1/3">
-            <h3 class="text-base uppercase pb-4 font-bold">Web Development</h3>
+            <h3 class="pb-4">Web Development</h3>
             <p>Full service web development with a focus on simple, performant solutions.</p>
         </div>    
         <div class="w-full md:w-1/3">
-            <h3 class="text-base uppercase pb-4 font-bold">Project Management</h3>
+            <h3 class="pb-4">Project Management</h3>
             <p>Expert guidance through every step of a project.</p>
         </div>
         <div class="w-full md:w-1/3">
-            <h3 class="text-base uppercase pb-4 font-bold">Support and Maintenance</h3>
+            <h3 class="pb-4">Support and Maintenance</h3>
             <p>Ongoing care that keeps your site working well for years to come.</p>
         </div>
     </div>
     <div class="text-center my-20">
-        <a href="/about/" class="underline">Learn more about our process -></a>
+        <a href="/about/" class="underline">Learn more about the process</a>
     </div>
 </div>
 
