--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ title: Home
         {% bigtext %}Expert web development and digital services focused on helping ↓<br />
         <span id="rotating-text" class="text-lime-700 dark:text-lime-300"></span>
         <br />
-        communicate online.{% endbigtext %}
+        {% endbigtext %}
     </div>        
 </div>
 <div class="full-width px-4 mb-24 ">
@@ -18,7 +18,7 @@ title: Home
         {% for post in works %}
         <div class="w-full md:w-1/3">
             <a href="{{post.url}}"><img class="mb-4" src="{{ post.data.image }}" alt="{{post.data.title}}"></a>            
-            <h3 class="pb-2 "><a href="{{post.url}}">{{post.data.title}}</a></h3>
+            <h3 class="pb-4 font-semibold"><a href="{{post.url}}">{{post.data.title}}</a></h3>
             <p>{{ post.data.summary | safe }}</p>
         </div>
         {% endfor %}
@@ -67,7 +67,7 @@ title: Home
     <div class="pb-16 mb-16 border-b border-dashed border-gray-200 dark:border-gray-600">
         <div class="flex flex-col-reverse md:flex-row gap-16">
             <div class="md:w-1/2">
-                <h1 class=" pb-4">The Arts</h1>
+                <h1 class="font-semibold pb-4">The Arts</h1>
                 <p>We have been servicing arts organizations of all shapes and sizes for many years. From consulting for organizations that lack internal technical expertise, to setting up robust content management systems that can accommodate the full depth and breadth of an institution's offerings, we provide practical solutions that keep things running smoothly. </p>
                 <a href="/work/arts/" class="block mt-4 underline">See the work</a>
 
@@ -76,7 +76,7 @@ title: Home
                 <img src="{{ '/assets/images/bampfa/bampfa-building.jpg' | url }}" alt="The Arts" class="w-full mx-auto">
             </div>
         </div>  
-        <div class="flex flex-row flex-wrap items-center justify-around md:justify-between gap-4 mt-16">
+        <div class="flex flex-row flex-wrap items-center justify-around md:justify-between gap-4 mt-12">
             <img class="w-28 opacity-50" src="{{ '/assets/images/logos/bampfa-logo.png' | url }}" alt="BAMPFA Logo">
             <img class="w-12 opacity-50" src="{{ '/assets/images/logos/500capp-logo.png' | url }}" alt="500 Capp Street Logo">
             <img class="w-36 opacity-50" src="{{ '/assets/images/logos/lightsource-logo.png' | url }}" alt="Lightsource Logo">
@@ -84,10 +84,10 @@ title: Home
 
         </div>            
     </div>
-    <div class="pb-24 mb-24 border-b border-dashed border-gray-200 dark:border-gray-600">
+    <div class="pb-24 mb-24">
         <div class="flex flex-col-reverse md:flex-row-reverse gap-16">
             <div class="md:w-1/2">
-                <h1 class="pb-4">Architecture and Design</h1>
+                <h1 class="pb-4 font-semibold">Architecture and Design</h1>
                 <p>Architecture and design websites are often characterized by beautiful, immersive imagery and pixel perfect design. We have experience setting up solutions that give designers full control over how their work is seen online, one of the most important drivers of new business. </p>
                 <a href="/work/arts/" class="block mt-4 underline">See the work</a>
             </div>
@@ -95,11 +95,11 @@ title: Home
                 <img src="{{ '/assets/images/ringo/image-1.jpg' | url }}" alt="Architecture and Design" class="w-full mx-auto">
             </div>
         </div>   
-        <div class="flex flex-row flex-wrap items-center justify-around md:justify-between gap-4 mt-16">
-            <img class="w-28 opacity-50" src="{{ '/assets/images/logos/bampfa-logo.png' | url }}" alt="BAMPFA Logo">
-            <img class="w-12 opacity-50" src="{{ '/assets/images/logos/500capp-logo.png' | url }}" alt="500 Capp Street Logo">
-            <img class="w-36 opacity-50" src="{{ '/assets/images/logos/lightsource-logo.png' | url }}" alt="Lightsource Logo">
-            <img class="w-36 opacity-50" src="{{ '/assets/images/logos/canalprojects-logo.png' | url }}" alt="Canal Projects Logo">
+        <div class="flex flex-row flex-wrap items-center justify-around md:justify-between gap-4 mt-12">
+            <img class="w-32 opacity-50" src="{{ '/assets/images/logos/niche-logo.png' | url }}" alt="Niche Interiors Logo">
+            <img class="w-36 opacity-50" src="{{ '/assets/images/logos/cckw-logo.png' | url }}" alt="CCKW Logo">
+            <img class="w-36 opacity-50" src="{{ '/assets/images/logos/ringo-logo.png' | url }}" alt="Ringo Studio Logo">
+            <img class="w-36 opacity-50" src="{{ '/assets/images/logos/elmo-logo.png' | url }}" alt="Elmo Studios Logo">
 
         </div>          
     </div>    
@@ -110,15 +110,15 @@ title: Home
     <div class="instrument-serif text-2xl mb-12 text-center">❋ Services</div>
     <div class="flex flex-col md:flex-row gap-12 items-start my-4 w-full">
         <div class="w-full md:w-1/3">
-            <h3 class="pb-4">Web Development</h3>
+            <h3 class="pb-4 font-semibold">Web Development</h3>
             <p>Full service web development with a focus on simple, performant solutions.</p>
         </div>    
         <div class="w-full md:w-1/3">
-            <h3 class="pb-4">Project Management</h3>
+            <h3 class="pb-4 font-semibold">Project Management</h3>
             <p>Expert guidance through every step of a project.</p>
         </div>
         <div class="w-full md:w-1/3">
-            <h3 class="pb-4">Support and Maintenance</h3>
+            <h3 class="pb-4 font-semibold">Support and Maintenance</h3>
             <p>Ongoing care that keeps your site working well for years to come.</p>
         </div>
     </div>
