update work page and about copy

--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -2,6 +2,6 @@
 layout: layout.njk
 ---
 
-<article class="prose dark:prose-dark mb-24 mx-auto">
+<article class="prose dark:prose-dark mb-24">
     {{ content | safe}}
 </article>
