--- a/src/_includes/job.njk
+++ b/src/_includes/job.njk
@@ -11,15 +11,15 @@ layout: layout.njk
 
     <img class="rounded" src="{{ image }}" />
     <div class="w-full flex flex-col gap-4 items-start my-4 md:my-12">
-        <div class="flex flex-col md:flex-row gap-8 w-full">
+        <div class="flex flex-col md:flex-row gap-8 w-full justify-between">
 
-            <div class="w-full md:w-3/5">
-                <div class="text-xl mx-auto md:px-8 prose dark:prose-dark">
+            <div class="w-full md:w-2/5">
+                <div class="text-xl mx-auto prose dark:prose-dark">
                     {{ content | safe }}
                 </div>                
             </div>
             <div class="w-full md:w-2/5">
-                <h3 class="instrument-serif text-3xl">❋ Roles</h3>
+                <h3 class="instrument-serif pb-4">❋ Roles</h3>
                 <ul class="list-none">
                     {% for role in roles %}
                         <li>{{role}}</li>
@@ -28,6 +28,7 @@ layout: layout.njk
             </div>            
         </div>
     </div>
+    
     <div class="w-full">
         {% slideshow images, dir %}        
     </div>
@@ -70,12 +71,9 @@ layout: layout.njk
                 <a class="text-right" href="{{ prevItem.url }}">{{ prevItem.data.title }}</a>
             {% endif %}
         </div>
-
-
     </div>
-
-
 </div>
+
 
 
 
