--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -160,7 +160,7 @@ a.link-white, .link-white > a {
 }
 
 [aria-current="page"].pill-button {
-    @apply  bg-gray-300 dark:bg-gray-800 dark:text-white
+    @apply bg-gray-300 dark:bg-gray-800 dark:text-white
 }
 
 
@@ -276,12 +276,10 @@ figcaption {
 
 a.pill-button {
     @apply  
-    lg:p-2
-    px-4 
-    lg:px-6
+    py-3
+    px-4
     text-center
-    text-base
-    lg:text-lg
+    text-lg
     rounded-full 
     border
     text-gray-600 
